@@ -16,7 +16,7 @@ if (! $ENV{PI_BOARD}){
 my $pi = $mod->new(fatal_exit => 0);
 my $pin = $pi->pin(5);
 $pin->mode(OUTPUT);
-is $pi->registered_pins, 1, "pin registered ok";
+is $pi->registered_pins, '5', "pin registered ok";
 
 eval { die "intentional die()"; };
 
